--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #e6e5dc;
 }
 
 .App-link {
