--- a/src/style.css
+++ b/src/style.css
@@ -147,7 +147,7 @@ button:focus {
   }
 }
 .navbar-brand {
-  color: rgb(250, 250, 250) !important;
+  color: #e6e5dc !important;
 }
 
 .logo {
@@ -156,7 +156,7 @@ button:focus {
 }
 
 .navbar-nav .nav-link {
-  color: white !important;
+  color: #e6e5dc !important;
   padding-right: 1rem !important;
   padding-left: 1rem !important;
 }
@@ -262,7 +262,7 @@ button:focus {
 
 .home-content {
   padding: 9rem 0 2rem !important;
-  color: whitesmoke;
+  color: #e6e5dc;
   text-align: left;
 }
 
@@ -320,7 +320,7 @@ button:focus {
 }
 
 .home-about-description {
-  color: white !important;
+  color: #e6e5dc !important;
   padding-top: 100px !important;
   padding-bottom: 20px !important;
   text-align: center;
@@ -335,7 +335,7 @@ button:focus {
 .home-about-social {
   text-align: center !important;
   padding-top: 25px;
-  color: white !important;
+  color: #e6e5dc !important;
 }
 
 .home-about-social-links {
@@ -424,7 +424,7 @@ button:focus {
 
 .footer h3 {
   font-size: 1em;
-  color: white !important;
+  color: #e6e5dc !important;
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
@@ -457,7 +457,7 @@ button:focus {
 
 .project-card-view {
   box-shadow: 0 4px 5px 3px #182a44 !important;
-  color: white !important;
+  color: #e6e5dc !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
@@ -480,13 +480,13 @@ button:focus {
 .blog-card-view {
   background-color: transparent !important;
   box-shadow: 0 3px 3px 2px #182a44 !important;
-  color: white !important;
+  color: #e6e5dc !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
 }
 
 .blog-link {
-  color: white !important;
+  color: #e6e5dc !important;
   text-decoration: none !important;
 }
 
@@ -528,7 +528,7 @@ button:focus {
   box-shadow: none !important;
 }
 .project-heading {
-  color: white !important;
+  color: #e6e5dc !important;
   font-size: 2.3em !important;
   font-weight: 500 !important;
   padding-top: 10px !important;
@@ -543,7 +543,7 @@ button:focus {
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: white !important;
+  color: #e6e5dc !important;
 }
 
 .tech-icons {
@@ -579,7 +579,7 @@ button:focus {
 
 .quote-card-view {
   border: none !important;
-  color: white !important;
+  color: #e6e5dc !important;
   background-color: transparent !important;
 }
 
@@ -603,7 +603,7 @@ button:focus {
   padding-top: 110px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: white !important;
+  color: #e6e5dc !important;
 }
 
 .resume {
