--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #0a192f !important;
+  background-color: #15305c !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(5, 2, 35, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -149,8 +149,8 @@ button:focus {
 }
 
 .logo {
-  height: 1em !important;
-  width: 4em !important;
+  height: 3em !important;
+  width: 3em !important;
 }
 
 .navbar-nav .nav-link {
